2005-04-24  Murray Cumming <murrayc@murrayc.com>

	* libxml++/parsers/saxparser.cc: SaxParserCallback::characters()
	Call on_characters(), not on_cdata_block(), so that the correct 
	derived handler is called. Bug #301712 and patch from 
	Aaron Walker.

2005-04-24  Murray Cumming <murrayc@murrayc.com>

	* libxml++-2.6.pc.in: Remove -I for the include location of 
	a config file, because we don't install one. Bug #301727 
	from Aaron Walker.

2005-03-15  Murray Cumming  <murrayc@murrayc.com>

	* libxml++/document.cc: set_entity_declaration(): Pass 0 instead 
	of empty strings for the public ID and system ID, if an empty 
	string is provided. This stops libxml from using a useless empty 
	string.

2005-03-09  Cedric Gustin <cedric.gustin@swing.be>

	* MSVC_Net2003/Makefile.am: Add blank.cpp to EXTRA_DIST.
	* MSVC_Net2003/examples/*/*.vcproj: Change name of PDB file to
	$(OutDir)/$(TargetName).pdb.

This is the HEAD branch.
	
2.10.0:
	
2005-03-08  Christophe de Vienne  <cdevienne@netcourrier.com>

	* docs/reference/Makefile.am: Added one more rule so the "make
	distcheck" works from a clean cvs working copy.

2005-03-08  Christophe de Vienne  <cdevienne@netcourrier.com>

	* docs/manual/Makefile.am, docs/reference/Makefile.am: Added a few
	rules so that "make dist" generated the documentation if it's
	absent.

2005-02-15  Murray Cumming  <murrayc@murrayc.com>

	* docs/manual/Makefule.am: Added insert_example_code to EXTRA_DIST, 
	though it should not be needed when building from a DIST anyway, 
	because we distribute the html.

2.9.2:

2005-02-13  Christophe de Vienne  <cdevienne@netcourrier.com>

	* docs/manual/Makefile.am: Removed README from EXTRA_DIST.

2005-02-12  Christophe de Vienne  <cdevienne@netcourrier.com>

	* libxml++/nodes/node.cc: Fixed a little inefficency in find (#161925)

2005-02-11  Murray Cumming  <murrayc@murrayc.com>

	* docs/: Added manual.
	* configure.in: Use GLIBMM_CHECK_PERL to get the perl path, needed 